--- a/FromScratch-cours/Js-P3/text-anim/index.html
+++ b/FromScratch-cours/Js-P3/text-anim/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="./script.js">
-    </script>
+    <title>Texte Anim</title>
+
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+        <h3> Je suis une </h3>
+        <h3 id="target"></h3>
     
+    <script src="./index.js"></script>
 </body>
 </html>
