--- a/JS-A-to-Z-57e9573398d7d9b637cc54e38cdf1713f4448181/password-maker/index.html
+++ b/JS-A-to-Z-57e9573398d7d9b637cc54e38cdf1713f4448181/password-maker/index.html
@@ -31,9 +31,11 @@
             <label for="symbols">:-!</label>
         </div>
         
+        <div id="space-buttons">
         <button id="generateButton">Générer un mot de passe</button>
 
         <button id="copyButton">Copié !</button>
+        </div>
 
     </div>
     <script src="./index.js"></script>
