--- a/exo8/pages/index.html
+++ b/exo8/pages/index.html
@@ -19,9 +19,9 @@
       <div class="header container">
         <div class="header__nav__left">
           <ul class="header__nav__left__list">
-            <li>Forfait & Téléphones</li>
-            <li>Box internet</li>
-            <li>Bons plans</li>
+            <li><a href="#"> Forfait & Téléphones</a></li>
+            <li><a href="#"> Box internet</a></li>
+            <li><a href="#"> Bons plans</a></li>
           </ul>
         </div>
 
@@ -31,8 +31,26 @@
 
         <div class="header__nav__right">
           <ul class="header__nav__right__list">
-            <li>Infos & Questions</li>
-            <li>#REDsponsable</li>
+            <li><a href="#"> Infos & Questions</a></li>
+            <li><a href="#"> #REDsponsable</a></li>
+            <li>
+              <a href="">
+                <img
+                  class="adaptative-img__contain"
+                  src="../ressources/search.svg"
+                  alt="search-logo"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  class="adaptative-img__contain"
+                  src="../ressources/profil.svg"
+                  alt="profil-logo"
+                />
+              </a>
+            </li>
           </ul>
         </div>
       </div>
@@ -62,36 +80,36 @@
             <li>
               <ul class="main__second__txt__ul-2">
                 <h3>Forfait mobile</h3>
-                <li>Forfait mobile</li>
-                <li>Options mobile</li>
-                <li>Couverture réseau mobile</li>
+                <li><a href="#"> Forfait mobile</a></li>
+                <li><a href="#">Options mobile</a></li>
+                <li><a href="#">Couverture réseau mobile</a></li>
               </ul>
             </li>
             <li>
               <ul class="main__second__txt__ul-2">
                 <h3>Téléphones</h3>
-                <li>Tous les téléphones</li>
-                <li>Téléphones en promo</li>
-                <li>Téléphones reconditionnés</li>
-                <li>Reprise mobile</li>
-                <li>Montres connectées</li>
+                <li><a href="#">Tous les téléphones</a></li>
+                <li><a href="#">Téléphones en promo</a></li>
+                <li><a href="#">Téléphones reconditionnés</a></li>
+                <li><a href="#">Reprise mobile</a></li>
+                <li><a href="#">Montres connectées</a></li>
               </ul>
             </li>
             <li>
               <ul class="main__second__txt__ul-2">
                 <h3>Offre box</h3>
-                <li>Box internet</li>
-                <li>Test d'éligibilité</li>
-                <li>Options box</li>
-                <li>Couverture réseau</li>
+                <li><a href="#">Box internet</a></li>
+                <li><a href="#">Test d'éligibilité</a></li>
+                <li><a href="#">Options box</a></li>
+                <li><a href="#">Couverture réseau</a></li>
               </ul>
             </li>
             <li>
               <ul class="main__second__txt__ul-2">
                 <h3>Déjà client</h3>
-                <li>Accéder à l'espace client</li>
-                <li>Suivre votre commande</li>
-                <li>Assistance</li>
+                <li><a href="#">Accéder à l'espace client</a></li>
+                <li><a href="#">Suivre votre commande</a></li>
+                <li><a href="#">Assistance</a></li>
               </ul>
             </li>
           </ul>
