--- a/exo9/pages/index.html
+++ b/exo9/pages/index.html
@@ -28,10 +28,7 @@
         </div>
         <button type="button" class="mobile__header"></button>
       </nav>
-      <!-- <aside>
-        <a href="#" class="button">Start Testnet</a>
-      </aside> -->
-      <section class="bg__img adaptative-img__cover">
+      <section class="bg__img adaptative-img__contain">
         <img
           src="https://venom.network/static/media/venom.16a64f94cf5ab97ccaa7d88c840e3059.svg"
           alt="venom__logo"
@@ -68,13 +65,25 @@
               <p>Install Venom Wallet</p>
             </div>
             <div class="main__how__blocks__secondary">
-              <a href="#"></a>
-              <a href="#"></a>
-              <a href="#"></a>
+              <a href="#"
+                ><img
+                  src="https://venom.network/static/media/apple.9530dd244651790d398d888e659a01fa.svg"
+                  alt="apple-store"
+              /></a>
+              <a href="#"
+                ><img
+                  src="https://venom.network/static/media/google.060317d23a5dcef240674a6f5282ac38.svg"
+                  alt="google-play"
+              /></a>
+              <a href="#"
+                ><img
+                  src="https://venom.network/static/media/chrom.0755718570ba2a41087158b910afb121.svg"
+                  alt="chrome"
+              /></a>
             </div>
           </div>
           <div class="main__how__blocks__2">
-            <div class="main__how__blocks__main">
+            <div class="main__how__blocks__main__2">
               <span>2</span>
               <p>Get VENOM tokens</p>
             </div>
@@ -83,7 +92,7 @@
           <div class="main__how__blocks__3">
             <div class="main__how__blocks__main">
               <span>3</span>
-              <p>Test dApps and earn NEFTs</p>
+              <p>Test dApps and earn NFTs</p>
             </div>
             <div class="main__how__blocks__secondary">
               <p>
@@ -94,7 +103,132 @@
           </div>
         </div>
       </article>
+      <article class="main__products">
+        <h1 class="main__products__title">Products accessible on Testnet</h1>
+        <div class="main__products__blocks">
+          <div>
+            <div>
+              <img
+                class="adaptative-img__contain"
+                src="../assets/logo1.svg"
+                alt="logo1"
+              />
+            </div>
+            <div>
+              <p>
+                Non-custodial wallet with a Multisig accounts option and Ledger
+                support.
+              </p>
+            </div>
+            <div><a href="#">Website</a></div>
+          </div>
+          <div>
+            <div>
+              <img
+                class="adaptative-img__contain"
+                src="../assets/logo2.svg"
+                alt="logo2"
+              />
+            </div>
+            <div>
+              <p>
+                Search and explore the immutabe records of the Venom blockchain.
+              </p>
+            </div>
+            <div><a href="#">Website</a></div>
+          </div>
+          <div>
+            <div>
+              <img
+                class="adaptative-img__contain"
+                src="../assets/logo3.svg"
+                alt="logo3"
+              />
+            </div>
+            <div>
+              <p>
+                First DEX on Venom that enables seamless trading by pooling
+                liquidity from investors.
+              </p>
+            </div>
+            <div><a href="#">Website</a></div>
+          </div>
+        </div>
+      </article>
+      <article class="main__about">
+        <h1 class="main__about__title">About Venom Blockchain</h1>
+        <div class="main__about__card">
+          <div class="main__about__left">
+            <img
+              class="adaptative-img__contain"
+              src="https://venom.network/static/media/about-testnet.3595a7f2e211253098c3.png"
+              alt="venom"
+            />
+          </div>
+          <div class="main__about__right">
+            <p>
+              Venom is a scalable blockchain solution that is designed to meet
+              the needs of real-world applications. Its unique architecture and
+              technology enable Venom to provide a high level of performance and
+              security, making it an ideal platform for decentralized
+              applications.
+            </p>
+            <p>
+              Gain knowledge and prepare by engaging in quests and activites.
+              This will provide you with substantial knowledge about the
+              bloackchain's operation, preparing you for the Mainnet.
+            </p>
+            <p>
+              Expand your knowledge and understanding of the Venom Blockchain by
+              exploring the Venom ecosystem.
+            </p>
+            <div class="main__about__footer">
+              <button type="button">Website</button>
+              <button type="button">Ecosystem</button>
+            </div>
+          </div>
+        </div>
+      </article>
+      <section class="main__subscribe">
+        <div class="main__subscribe__blocks">
+          <img
+            class="main__subscribe__blocks__img adaptative-img__contain"
+            src="https://venom.network/static/media/mail.f201bde165219d2be2d2eb92cce35c54.svg"
+            alt="icon_email"
+          />
+          <div class="main__subscribe__blocks__info">
+            <h3>Stay Connected</h3>
+            <p>
+              Subscribe to our newsletter - stay up to date with our promotions
+            </p>
+          </div>
+        </div>
+        <form action="" class="main__subscribe__form">
+          <input
+            type="text"
+            name="form__subscribe"
+            id="#"
+            placeholder="E-mail"
+          />
+          <button type="button" class="main__subscribe__form__button">
+            Subscribe
+          </button>
+        </form>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer__links">
+        <ul class="footer__links__list">
+          <li><a href="#">Start testnet</a></li>
+          <li class="footer__links__list__arrow"><a href="#">Guide</a></li>
+          <li class="footer__links__list__arrow"><a href="#">Hackathon</a></li>
+        </ul>
+      </div>
+      <div class="footer__rights">
+        <span>Venom Technologies © 2023 All Rights Reserved</span
+        ><a href="#">Privacy Policy</a><a href="#">Terms & conditions</a
+        ><a href="#">Cookies</a>
+      </div>
+    </footer>
   </body>
 </html>
